Fix ESLint errors for production build

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,3 @@
 REACT_APP_BACKEND_URL=https://sentiment-aura-7z75.onrender.com
 REACT_APP_DEEPGRAM_API_KEY=6123546c58fe9fab72f8c35dc92c074d88602e5f
+DISABLE_ESLINT_PLUGIN=true
